# office-admin-codex-impl

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
docs/: ROADMAP.md  architecture.md  component-contracts.md  domain-rules.md  message-model.md  testing-strategy.md
scripts/: OfficeAdmin.bat  office-admin.command
specs/: calendar-worker.md  document-worker.md  mail-worker.md  office-admin.md  office-fastapi-backend.md  office-html.md  printer-worker.md
src/office_admin/: admin.py  api.py  models.py  workers.py
static/: app.js  styles.css
templates/: email_notification_template  index.html
tests/: __init__.py  conftest.py  fakes.py  test_api.py  test_calendar_worker.py  test_document_worker.py  test_mail_worker.py  test_office_admin.py  test_printer_worker.py
